@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2011 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -36,7 +36,8 @@ introtags = [
     "We're sorry. There's a problem",
     'Check your send e-mail address.',
     'This is the mail delivery agent at',
-    'Unfortunately, your mail was not delivered'
+    'Unfortunately, your mail was not delivered',
+    'Your mail message to the following',
     ]
 acre = re.compile(r'<(?P<addr>[^>]*)>:')
 
