@@ -73,6 +73,8 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added recognition for another Qmail bounce format.
+
     - Fixed an erroneous seek in the Mailman.Mailbox.Mailbox.AppendMessage
       method that could cause a corrupt mailbox for files opened 'w+'.
       Bug #901957.
